--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The pgen erc20 token",
   "main": "index.js",
   "scripts": {
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -28,10 +29,18 @@
     "hardhat": "^2.5.0",
     "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
+    "husky": "^7.0.1",
+    "prettier": "^2.3.2",
+    "pretty-quick": "^3.1.1",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   }
 }
