tweak license and optimizer

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/polygen-io/pgen.git"
   },
   "author": "polygen",
-  "license": "MIT",
+  "license": "CAL",
   "bugs": {
     "url": "https://github.com/polygen-io/pgen/issues"
   },
