--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "husky": "^7.0.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "solhint": "^3.3.6",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
